third_party/WebKit/Source/WebCore/rendering/RenderFileUploadControl.h
@@ -56,6 +56,8 @@ private:
     virtual VisiblePosition positionForPoint(const LayoutPoint&);
 
     HTMLInputElement* uploadButton() const;
+
+    bool m_canReceiveDroppedFiles;
 };
 
 inline RenderFileUploadControl* toRenderFileUploadControl(RenderObject* object)
